--- a/config.dev.js.dist
+++ b/config.dev.js.dist
@@ -3,7 +3,7 @@ module.exports = {
         host: 'media-db',
         port: 27017,
         username: 'root',
-        password: '12345',
+        password: '~',
         database: 'media'
     },
     web: {
