--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -16,7 +16,7 @@ services:
     image: mongo:4.0.0    
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: 12345
+      MONGO_INITDB_ROOT_PASSWORD: ~
       MONGO_INITDB_DATABASE: media
     ports:
       - '10112:27017'
